@@ -1,5 +1,10 @@
 # $Id$
 
+2009-02-13	Evgeniy N. Sokolov
+
+	* main/Utils/TextUtils.class.php: friendlyNumber() now works with float
+	and negative numbers.
+
 2009-02-13	Ivan Y. Khvostishkov
 
 	* main/Utils/TuringTest/Color.class.php: flyweight pattern implemented.
